--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,10 +1,12 @@
 # Makefile.am for online-update-configuration/doc
 
-SUBDIRS = autodocs
+#SUBDIRS = autodocs
+SUBDIRS = 
 
 htmldir = $(docdir)
 
 doc_DATA =
 html_DATA =
 
-EXTRA_DIST = $(doc_DATA) $(html_DATA)
+#EXTRA_DIST = $(doc_DATA) $(html_DATA)
+EXTRA_DIST = 
