--- a/yast2-online-update-configuration.spec.in
+++ b/yast2-online-update-configuration.spec.in
@@ -23,6 +23,7 @@ License:        GPL v2 or later
 Requires:       yast2 >= 2.17.0
 Requires:       yast2-packager >= 2.17.0
 Requires:       yast2-pkg-bindings >= 2.17.20
+Conflicts:      yast2-registration <= 2.19.1
 
 PreReq:         %fillup_prereq
 BuildRequires:  yast2 >= 2.17.0
