--- a/yast2-online-update-configuration.spec.in
+++ b/yast2-online-update-configuration.spec.in
@@ -24,6 +24,7 @@ Requires:       yast2 >= 2.17.0
 Requires:       yast2-packager >= 2.17.0
 Requires:       yast2-pkg-bindings >= 2.17.20
 Conflicts:      yast2-registration <= 2.19.1
+Provides:       registration:/usr/share/YaST2/clients/online_update_configuration.ycp
 
 PreReq:         %fillup_prereq
 BuildRequires:  yast2 >= 2.17.0
