--- a/yast2-online-update-configuration.spec.in
+++ b/yast2-online-update-configuration.spec.in
@@ -19,7 +19,7 @@
 
 @HEADER@
 Group:          System/YaST
-License:        GPL v2 or later
+License:        GPL-2.0+
 # Wizard::SetDesktopTitleAndIcon
 Requires:       yast2 >= 2.21.0
 Requires:       yast2-packager >= 2.17.0
