--- a/yast2-online-update-configuration.spec.in
+++ b/yast2-online-update-configuration.spec.in
@@ -34,6 +34,8 @@ BuildRequires:  yast2-pkg-bindings >= 2.17.20
 BuildArch:      noarch
 
 
+Requires:       yast2-ruby-bindings >= 1.0.0
+
 Summary:        Configuration of Online Update
 
 %description
@@ -55,9 +57,8 @@ Allows to configure automatic online update.
 %doc @docdir@
 %dir @yncludedir@/online-update-configuration
 @yncludedir@/online-update-configuration/*
-@clientdir@/*.ycp
-@moduledir@/*.ycp
-@moduledir@/*.ybc
+@clientdir@/*.rb
+@moduledir@/*.rb
 @desktopdir@/online_update_configuration.desktop
 @schemadir@/autoyast/rnc/*.rnc
 /usr/lib/YaST2/bin/online_update
