YCP Killer: Regenerate Makefile.am files in all source directories
The commit is a result of running YCP Killer's "makefile" command.

See also:

  https://github.com/yast/ycp-killer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,29 @@
-#
-# Makefile.am for online-update-configuration/src
-#
+# Sources for online-update-configuration
 
-SUBDIRS = modules clients config dialogs scripts
+module_DATA = \
+  modules/OnlineUpdateConfiguration.rb
+
+client_DATA = \
+  clients/online_update_configuration_auto.rb \
+  clients/online_update_configuration.rb
+
+yncludedir = @yncludedir@/online-update-configuration
+ynclude_DATA = \
+  include/online-update-configuration/OUCDialogs.rb
+
+schemafilesdir = $(schemadir)/autoyast/rnc
+schemafiles_DATA = \
+  autoyast-rnc/online_update_configuration.rnc
+
+ybin_SCRIPTS = \
+  bin/online_update
+
+desktop_DATA = \
+  desktop/online_update_configuration.desktop
+
+fillup_DATA = \
+  fillup/sysconfig.automatic_online_update-yast2-online-update-configuration
+
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA)
+
+include $(top_srcdir)/Makefile.am.common
