--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 .deps
 .libs
 package/*.bz2
-package/*.spec
 stamp-h*
 autom4te.cache
 config.cache
@@ -19,7 +18,7 @@ config.log
 config.status
 config.sub
 configure
-configure.in
+configure.ac
 COPYING
 COPYRIGHT.english
 depcomp
