Fix missing entries in makefile and spec

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,9 @@ client_DATA = \
   clients/online_update_configuration_auto.rb \
   clients/online_update_configuration.rb
 
+lib_DATA = \
+  lib/online_update_configuration/zypp_config.rb
+
 yncludedir = @yncludedir@/online-update-configuration
 ynclude_DATA = \
   include/online-update-configuration/OUCDialogs.rb
@@ -24,6 +27,6 @@ desktop_DATA = \
 fillup_DATA = \
   fillup/sysconfig.automatic_online_update-yast2-online-update-configuration
 
-EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA)
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA) $(lib_DATA)
 
 include $(top_srcdir)/Makefile.am.common
