Added additional searchkeys to desktop file

--- a/src/desktop/online_update_configuration.desktop
+++ b/src/desktop/online_update_configuration.desktop
@@ -9,6 +9,7 @@ X-SuSE-YaST-AutoInst=all
 X-SuSE-YaST-AutoInstClonable=true
 X-SuSE-YaST-AutoInstRequires=lan,proxy
 X-SuSE-YaST-AutoInstSchema=online_update_configuration.rnc
+X-SuSE-YaST-Keywords=online,update,YOU,patch
 
 Icon=yast-online_update
 Exec=/sbin/yast2 online_update_configuration
