--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,10 @@ desktop_DATA = \
 fillup_DATA = \
   fillup/sysconfig.automatic_online_update-yast2-online-update-configuration
 
-EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA) $(ylib_DATA)
+scalabledir = @icondir@/hicolor/scalable/apps
+scalable_DATA = \
+  icons/hicolor/scalable/apps/yast-update-online-configuration.svg
+
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA) $(ylib_DATA) $(scalable_DATA)
 
 include $(top_srcdir)/Makefile.am.common
