--- a/src/desktop/org.opensuse.yast.OnlineUpdateConfiguration.desktop
+++ b/src/desktop/org.opensuse.yast.OnlineUpdateConfiguration.desktop
@@ -9,6 +9,7 @@ X-SuSE-YaST-AutoInst=all
 X-SuSE-YaST-AutoInstClonable=true
 X-SuSE-YaST-AutoInstRequires=lan,proxy
 X-SuSE-YaST-AutoInstSchema=online_update_configuration.rnc
+X-SuSE-YaST-AutoInstResource=online_update_configuration
 X-SuSE-YaST-Keywords=online,update,YOU,patch
 
 Icon=yast-update-online-configuration
