--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,6 @@ jobs:
     - name: Git Checkout
       uses: actions/checkout@v2
 
-    # FIXME: optionally install the missing dependencies
-    # - name: Install Dependencies
-    #   run: zypper --non-interactive install foobar
-
     # just for easier debugging...
     - name: Inspect Installed Packages
       run: rpm -qa | sort
@@ -57,7 +53,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Yardoc
-      # FIXME: you can just run "yardoc" if "check:doc" task is too strict...
       run: rake check:doc
 
   # downloading the Docker image takes some time so bundling several fast
@@ -74,6 +69,6 @@ jobs:
     - name: POT Check
       run: rake check:pot
 
-    # FIXME: Fix all warnings found by shell check
+    # TODO: Fix all warnings found by shell check
     #- name: Shell Check
     #  run: shellcheck src/bin/online_update
